--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <header className="relative h-screen w-full overflow-hidden flex items-center justify-center bg-black">
             {/* Video Placeholder */}
             <div className="absolute inset-0 w-full h-full bg-gray-900">
-              <div className="w-full h-full opacity-50 bg-[url('https://images.unsplash.com/photo-1492684223066-81342ee5ff30?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80')] bg-cover bg-center animate-ken-burns">
+              <div className="w-full h-full opacity-50 bg-[url('https://github.com/nsanchezBG/PurpleRevamp/raw/b0f6bdddb588268dbe4cdca1a7ddeeda17b65913/1121.mp4')] bg-cover bg-center animate-ken-burns">
                   {/* This image acts as a fallback/placeholder for the video */}
               </div>
               
