--- a/index.html
+++ b/index.html
@@ -170,18 +170,18 @@
       const Hero = () => {
         return (
           <header className="relative h-screen w-full overflow-hidden flex items-center justify-center bg-black">
-            {/* Video Placeholder */}
-            <div className="absolute inset-0 w-full h-full bg-gray-900">
-              <div className="w-full h-full opacity-50 bg-[url('https://github.com/nsanchezBG/PurpleRevamp/raw/b0f6bdddb588268dbe4cdca1a7ddeeda17b65913/1121.mp4')] bg-cover bg-center animate-ken-burns">
-                  {/* This image acts as a fallback/placeholder for the video */}
-              </div>
-              
-              {/* Simulated Video Background Element */}
-              <div className="absolute inset-0 flex items-center justify-center pointer-events-none">
-                  <span className="px-4 py-2 border border-white/20 text-white/40 text-xs tracking-widest uppercase bg-black/30 backdrop-blur-sm rounded">
-                      Background Video Loop
-                  </span>
-              </div>
+            {/* Video Background */}
+            <div className="absolute inset-0 w-full h-full bg-black">
+                <video 
+                    className="w-full h-full object-cover opacity-70"
+                    autoPlay 
+                    loop 
+                    muted 
+                    playsInline
+                >
+                    <source src="https://github.com/nsanchezBG/PurpleRevamp/raw/b0f6bdddb588268dbe4cdca1a7ddeeda17b65913/1121.mp4" type="video/mp4" />
+                    Your browser does not support the video tag.
+                </video>
             </div>
 
             {/* Overlay */}
